Change default garbage collector to G1
GitOrigin-RevId: 10e5e34c496725646cd402f9b036723c4aedf8b9